fix: Master EADL -> Licence CDA

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <span class="status-badge">Open to work</span>
                     </div>
                     <div class="username">@Dyldevlab · Concepteur D&eacute;veloppeur d'Applications</div>
-                    <p class="bio">D&eacute;veloppeur passionn&eacute;, je recherche une alternance d'1 an en d&eacute;v web/logiciel.<br>Objectif : Master EADL en alternance.</p>
+                    <p class="bio">D&eacute;veloppeur passionn&eacute;, je recherche une alternance d'1 an en d&eacute;v web/logiciel.<br>Objectif : Licence Concepteur D&eacute;veloppeur d'Applications en alternance.</p>
                     <div class="meta-row">
                         <span class="meta-item">&#128205; Niort, France</span>
                         <span class="meta-item">&#128231; <a href="mailto:dylan.nalin79@gmail.com">dylan.nalin79@gmail.com</a></span>
